# calebandjack

./: Cargo.toml  Shuttle.toml
migrations/: recommendations.sql  reviews.sql  sessions.sql  user.sql
src/: apiroutes.rs  main.rs  routes.rs  templates.rs
styles/: home.css  index.css  login.css  new_user.css  protected.css  recommendation.css  review.css
templates/: base.html  home.html  index.html  login.html  new_success.html  new_user.html  new_user_invalid.html  new_username_validation.html  protected.html  recommendation.html  recommendation_invalid.html  review.html  username_validation.html
