[package]
name = "calebandjack"
version = "0.1.0"
edition = "2021"

[env]
RUST_LOG = "shuttle=error,warn,debug,info"

[dependencies]
axum = { version = "0.8.1", features = ["query"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
axum-macros = "0.5.0"
cookie = "0.18.1"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.207", features = ["derive"] }
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
shuttle-secrets = "0.42.0"
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx-native-tls"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "time"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
